Fixed CanvasVisible positioning issue on mobile and disabled drag events for the image loaded into canvas to allow for touch scrolling

--- a/src/stylesheets/components/_app.scss
+++ b/src/stylesheets/components/_app.scss
@@ -85,7 +85,9 @@
   .leftContainer {
     flex: 0 0 auto;
     max-width: 100%;
-    align-items: flex-start;
+    align-items: center;
+    margin-top: auto;
+    margin-bottom: auto;
     min-height: auto;
   }
   .canvasContainer {
